k8s/02-account-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
  namespace: peerprep
spec:
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - name: account
          image: 656831507331.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-account
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              protocol: TCP
      imagePullSecrets:
        - name: awscred
