k8s/04-chat-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: peerprep
spec:
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: chat
          image: 656831507331.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-chat
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
              protocol: TCP
      imagePullSecrets:
        - name: awscred
