k8s/08-match-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: match
  namespace: peerprep
spec:
  selector:
    matchLabels:
      app: match
  template:
    metadata:
      labels:
        app: match
    spec:
      containers:
        - name: match
          image: 656831507331.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-match
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
              protocol: TCP
      imagePullSecrets:
        - name: awscred
