k8s/03-account-service.yml
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: peerprep
spec:
  selector:
    app: account
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
