k8s/05-chat-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: peerprep
  annotations:
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-path: /chat
spec:
  selector:
    app: chat
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
